--- a/literary-work.html
+++ b/literary-work.html
@@ -7,7 +7,7 @@
 <body>
     <a href="index.html">Main Page</a> <br>
     <a href="early-life.html">Early life and education</a> <br>
-    <a href="literary-work.html">literary work</a> <br>
+    <a href="literary-work.html">Literary work</a> <br>
     <a href="pupin-colis.html">Pupin Coils</a> <br>
 
 <hr>
